[gd_scene load_steps=14 format=3 uid="uid://5kcfaq5d83ed"]

[ext_resource type="Texture2D" uid="uid://b8b3ptuaygs13" path="res://sprites/spritesheet_retina.png" id="1_0q85a"]
[ext_resource type="Script" uid="uid://dtsxr0wa8jsaf" path="res://character_manager/characters/character_base.gd" id="1_eu50f"]
[ext_resource type="PackedScene" uid="uid://boyv7f5mhv6a1" path="res://character_manager/characters/character_state_machine/character_state_machine.tscn" id="3_0kt0h"]
[ext_resource type="Script" uid="uid://cyqucf56djyo0" path="res://character_manager/characters/shield_manager.gd" id="4_aqj72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kt0h"]
size = Vector2(74, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4mj0"]
atlas = ExtResource("1_0q85a")
region = Rect2(1152, 640, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6pfkb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4mj0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqj72"]
size = Vector2(20, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_isgfy"]
atlas = ExtResource("1_0q85a")
region = Rect2(768, 1280, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0kt0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isgfy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1eee"]
size = Vector2(100, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyl5o"]
atlas = ExtResource("1_0q85a")
region = Rect2(1280, 1152, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_1v3gq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyl5o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CharacterTemplate" type="CharacterBody2D"]
z_index = 10
collision_layer = 0
collision_mask = 200
script = ExtResource("1_eu50f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -65)
shape = SubResource("RectangleShape2D_0kt0h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_6pfkb")

[node name="CharacterStateMachine" parent="." instance=ExtResource("3_0kt0h")]

[node name="Label" type="Label" parent="."]
offset_left = -40.0
offset_top = -172.0
offset_right = 47.0
offset_bottom = -115.0
text = "Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownCast" type="RayCast2D" parent="."]
position = Vector2(0, -24)
target_position = Vector2(0, 23)
collision_mask = 16
hit_from_inside = true

[node name="FrontCast" type="RayCast2D" parent="."]
position = Vector2(-40, -64)
target_position = Vector2(80, 0)
collision_mask = 16
hit_from_inside = true

[node name="WeaponManager" type="Node2D" parent="."]

[node name="WeaponHit" type="Node2D" parent="WeaponManager"]

[node name="WeaponShoot" type="Node2D" parent="WeaponManager"]

[node name="ShieldManager" type="Node2D" parent="."]
script = ExtResource("4_aqj72")

[node name="FrontShield" type="StaticBody2D" parent="ShieldManager"]
collision_layer = 32
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldManager/FrontShield"]
position = Vector2(32, -65)
shape = SubResource("RectangleShape2D_aqj72")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ShieldManager/FrontShield"]
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_0kt0h")
offset = Vector2(-16, 0)

[node name="GlideShield" type="StaticBody2D" parent="ShieldManager"]
collision_layer = 64
collision_mask = 131

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldManager/GlideShield"]
position = Vector2(0, -130)
shape = SubResource("RectangleShape2D_l1eee")
one_way_collision = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ShieldManager/GlideShield"]
position = Vector2(0, -70)
sprite_frames = SubResource("SpriteFrames_1v3gq")
metadata/_edit_lock_ = true
